--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ APP_MAINTENANCE_DRIVER=file
 
 PHP_CLI_SERVER_WORKERS=4
 
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
+
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
