--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,50 +6,16 @@ services:
     container_name: adiwarna-api
     restart: unless-stopped
     ports:
-      - "${APP_PORT:-8000}:80"
-    environment:
-      - APP_ENV=production
-      - APP_DEBUG=false
-      - APP_KEY=${APP_KEY}
-      - APP_URL=${APP_URL}
-      - DB_CONNECTION=${DB_CONNECTION}
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_DATABASE=${DB_DATABASE}
-      - DB_USERNAME=${DB_USERNAME}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - CACHE_DRIVER=${CACHE_DRIVER:-file}
-      - SESSION_DRIVER=${SESSION_DRIVER:-file}
-      - QUEUE_CONNECTION=${QUEUE_CONNECTION:-sync}
-      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
+      - "${APP_PORT:-8006}:80"
+    env_file:
+      - .env
     volumes:
       - ./storage:/app/storage
       - ./bootstrap/cache:/app/bootstrap/cache
     networks:
-      - adiwarna-network
-    depends_on:
-      - db
-
-  db:
-    image: mysql:8.0
-    container_name: adiwarna-db
-    restart: unless-stopped
-    environment:
-      - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
-      - MYSQL_DATABASE=${DB_DATABASE}
-      - MYSQL_USER=${DB_USERNAME}
-      - MYSQL_PASSWORD=${DB_PASSWORD}
-    volumes:
-      - db-data:/var/lib/mysql
-    ports:
-      - "${DB_EXTERNAL_PORT:-3307}:3306"
-    networks:
-      - adiwarna-network
+      - app-network
 
 networks:
-  adiwarna-network:
-    driver: bridge
+  app-network:
+    external: true
 
-volumes:
-  db-data:
-    driver: local
