feat: enhance Dockerfile and deployment configuration with GitHub token support and optimized composer installation

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/adiwarna-api:${{ github.sha }}
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/adiwarna-api:latest
           cache-to: type=inline
+          build-args: |
+            GITHUB_TOKEN=${{ github.token }}
 
   deploy:
     runs-on: ubuntu-latest
