--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,10 @@ services:
     env_file:
       - .env
     volumes:
-      - ./storage:/app/storage
-      - ./bootstrap/cache:/app/bootstrap/cache
+      - ./storage:/app/storage/public
     networks:
       - app-network
 
 networks:
   app-network:
     external: true
-
