--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -29,8 +32,8 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/adiwarna-api:latest
             ${{ secrets.DOCKER_USERNAME }}/adiwarna-api:${{ github.sha }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/adiwarna-api:latest
-          cache-to: type=inline
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           build-args: |
             GITHUB_TOKEN=${{ github.token }}
 
@@ -58,6 +61,9 @@ jobs:
 
             # Start new container
             docker compose up -d
+
+            # Wait for container to be ready
+            sleep 10
 
             # Clear and cache config
             docker exec adiwarna-api php artisan route:cache
