--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,11 @@ name: Build and Deploy Adiwarna API
 on:
   push:
     branches:
-      - prod
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: PRODUCTION
 
     steps:
       - name: Checkout repository
@@ -29,45 +28,22 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: |
-            ${{ secrets.DOCKER_USERNAME }}/adiwarna-api:latest
-            ${{ secrets.DOCKER_USERNAME }}/adiwarna-api:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          build-args: |
-            GITHUB_TOKEN=${{ github.token }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment: PRODUCTION
 
     steps:
       - name: Deploy on VPS
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: ${{ secrets.PORT || 22 }}
+          host: ${{ secrets.VPS_1_HOST_IP }}
+          username: ${{ secrets.VPS_1_HOST_USERNAME }}
+          password: ${{ secrets.VPS_1_HOST_PASSWORD }}
+          port: ${{ secrets.VPS_1_HOST_PORT }}
           script: |
-            cd /var/www/adiwarna-api
-
-            # Pull latest image
-            docker pull ${{ secrets.DOCKER_USERNAME }}/adiwarna-api:latest
-
-            # Stop and remove old container
+            cd /media/${{github.event.repository.name}}
+            docker compose pull
             docker compose down
-
-            # Start new container
             docker compose up -d
-
-            # Wait for container to be ready
-            sleep 10
-
-            # Clear and cache config
-            docker exec adiwarna-api php artisan route:cache
-            docker exec adiwarna-api php artisan view:cache
-
-            # Clean up old images
-            docker image prune -f
