--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,3 +47,4 @@ jobs:
             docker compose pull
             docker compose down
             docker compose up -d
+            docker compose exec -t php artisan migrate --force
